# modellsteuerung-backend

./: .env.example  .gitignore  LICENSE  beep_test.py  envoy.yaml  genhmac.py  justfile  mocks.json  pyproject.toml  readme.md  requirements.txt
configurations/live/: desk1.json  desk2.json  desk3.json  desk4.json  luisehinten.json  luisevorn.json  mast1.json  mast2.json  mast3.json  notaus.json  notausampel.json  spinellivorne.json
configurations/testbench/: dip_left.json  dip_right.json  errgehbeh.json  kelda.json  next_to_power.json  testbench.md  uselessguy.json
configurator/: __main__.py  config_schema.json  sercom.py  swarm_types.py
frontend_rpc/: Backend.ts  Info.ts  KeyPair.ts  KeyStatus.ts  Level.ts  NTCStat.ts  NTCStatElement.ts  Notification.ts  NotificationIdentifier.ts  NotificationList.ts  Speed.ts  State.ts  StatsData.ts  Status.ts  Void.ts  grpcdefs.proto  grpcdefs.ts
frontend_rpc/frontend_rpc/: GrpcdefsServiceClientPb.ts  grpcdefs_pb.d.ts  grpcdefs_pb.js
modellsteuerung_backend/: __init__.py  __main__.py  logger.py  main.py  utils.py
modellsteuerung_backend/api/: __init__.py
modellsteuerung_backend/api/grpc/: grpcdefs.proto  grpcdefs_pb2.py  grpcdefs_pb2.pyi  grpcdefs_pb2_grpc.py
modellsteuerung_backend/hardware/: __init__.py  drivectl.py  hardwaremod.py  io.py  mock.py  modifier.py  swarm.py
modellsteuerung_backend/hardware/desk/: __init__.py
modellsteuerung_backend/logger/: __init__.py
modellsteuerung_backend/routes/: __init__.py  desk.py  drivectl.py  notifications.py
modellsteuerung_backend/state/: __init__.py  controller_state.py  drivectrlstate.py  notifications.py
modellsteuerung_backend/swarm/: __init__.py  swarm.py
(+14 files in other folders)
