[tool.poetry]
name = "modellsteuerung-backend"
version = "0.1.0"
description = ""
authors = ["Christian Bergschneider <bergschneider@stellarverse.de>"]
readme = "README.md"
packages = [{include = "modellsteuerung_backend"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
