[tool.poetry]
name = "modellsteuerung-backend"
version = "0.1.0"
description = ""
authors = ["Christian Bergschneider <christian.bergschneider@gmx.de>"]
readme = "README.md"
packages = [{include = "modellsteuerung_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
coloredlogs = "^15.0.1"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "modellsteuerung_backend.main:start"