[tool.poetry]
name = "modellsteuerung-backend"
version = "0.1.0"
description = ""
authors = ["Christian Bergschneider <christian.bergschneider@gmx.de>"]
readme = "README.md"
packages = [{include = "modellsteuerung_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
coloredlogs = "^15.0.1"
colorama = "^0.4.6"
pyserial = "^3.4.1"
semantic_version = "^2.8.5"
requests = "^2.26.0"
tabulate = "^0.9.0"
bottle = "^0.12.19"
ajsonrpc = "^1.2.0"
marshmallow = "^3.19.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "modellsteuerung_backend.main:start"